tests/compile/loops/tuple_destructure_error.stderr
error: Mismatched number of elements in the tuple
 --> tests/compile/loops/tuple_destructure_error.rs:5:44
  |
5 |     for (a, (b, c)) in [(foo, (bar, baz)), (gork, bork)]
  |                                            ^
